# mdns-scanner

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  clippy.toml  dist-workspace.toml  justfile  osv-scanner.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: FUNDING.yml  codecov.yml  dependabot.yml
.github/actions/setup-npcap/: action.yml
.github/dist-build-setup/: build-setup.yml
.github/workflows/: CI.yml  audit.yml  build-binaries.yml  dependabot_changelog.yml  msrv.yml  release.yml  shear.yml
crates/mds-cli/: Cargo.toml
crates/mds-cli/src/: cli.rs  lib.rs  self_update.rs
crates/mds-collector/: Cargo.toml
crates/mds-collector/src/: dns_sd_discoverer.rs  hosts_up_checker.rs  lib.rs
crates/mds-config/: Cargo.toml
crates/mds-config/src/: config_type.rs  default.rs  eq.rs  error.rs  interfaces.rs  lib.rs  load.rs  modify.rs  scan.rs  shared_config.rs  timeouts.rs  toggle.rs  ui.rs
crates/mds-config/src/scan/: io_threads.rs
crates/mds-default/: Cargo.toml
crates/mds-default/src/: default.rs  lib.rs
crates/mds-dns-sd/: Cargo.toml
crates/mds-dns-sd/proptest-regressions/: util.txt
crates/mds-dns-sd/src/: bivec.rs  discover.rs  discover_new.rs  discover_old.rs  lib.rs  lookup.rs  main.rs  prelude.rs  service_registry.rs  util.rs
crates/mds-dns-sd/src/discover/: query.rs
crates/mds-dns-sd/src/discover_new/: query.rs
crates/mds-dns-sd/src/discover_old/: query.rs
crates/mds-ipinfo/: Cargo.toml
crates/mds-ipinfo/src/: db.rs  ip.rs  lib.rs  rtt_stats.rs  service.rs
crates/mds-keybindings/: Cargo.toml
crates/mds-keybindings/src/: action.rs  default.rs  lib.rs  popup.rs
crates/mds-keybindings/src/snapshots/: mds_keybindings__tests__default_keybindings_snapshot.snap  mds_keybindings__tests__validate_valid_keymap_report.snap
crates/mds-log/: Cargo.toml
crates/mds-log/src/: db.rs  lib.rs  logger.rs  prelude.rs
crates/mds-netscan/: Cargo.toml
crates/mds-netscan/src/: lib.rs  progress.rs  scan.rs
crates/mds-performance-memory-allocator/: Cargo.toml
crates/mds-tui/: Cargo.toml
crates/mds-tui/src/: components.rs  config_box.rs  config_window.rs  error_box.rs  help_footer.rs  keybindings.rs  lib.rs  log_pane.rs  message.rs  model.rs  option_selector.rs  scan_backend.rs  search_box.rs  table_pane.rs  util.rs
crates/mds-tui/src/config_window/: cfg_picker_state.rs  selected_tab.rs
crates/mds-tui/src/table_pane/: clipboard.rs  colors.rs  ipinfo_popup.rs  util.rs
crates/mds-util/: Cargo.toml  build.rs
crates/mds-util/src/: constants.rs  debug_expect.rs  emojis.rs  host_up.rs  lib.rs  ping.rs  prelude.rs  refresh.rs  resource_scaling.rs
docs/: default_config.toml  default_keybindings.toml  default_keymap.toml
scripts/: install.sh  package.bash  version.just
src/: cli.rs  collect_ip.rs  constants.rs  dns_sd.rs  host_up.rs  info_collecter.rs  info_collector.rs  ip_info.rs  log.rs  main.rs  mdns.rs  mdns_info.rs  network_scan.rs  network_scanner.rs  new_network_scan.rs  ping.rs  run.rs  scan_ip.rs  self_update.rs  setup.rs  tui.rs  util.rs  version.rs
src/dns_sd/: discover.rs  service_registry.rs
src/dns_sd/discover/: query.rs
src/info_collector/: dns_sd_discoverer.rs  hosts_up_checker.rs
src/ip_info/: db.rs
src/log/: db.rs  logger.rs
src/tui/: log_pane.rs  model.rs  search_box.rs  table.rs  table_pane.rs
src/tui/table_pane/: colors.rs  util.rs
tests/: self_update.rs  snapshot_rendering.rs  snapshot_rich_rendering.rs  snapshot_sub_line_selector.rs  snapshots.rs
tests/common/: mod.rs
tests/snapshots/: snapshot_rendering__render_default.snap  snapshot_rendering__render_default_config_editor_box.snap  snapshot_rendering__render_default_config_editor_box_next_tab.snap  snapshot_rendering__render_default_config_editor_box_select_edit.snap  snapshot_rendering__render_default_config_editor_ui_tab_wrapped_key.snap  snapshot_rendering__render_default_keybindings_popup.snap  snapshot_rendering__render_default_search_box.snap  snapshot_rich_rendering__render_log_pane_focused_scroll_end.snap  snapshot_rich_rendering__render_log_pane_minimised.snap  snapshot_rich_rendering__render_many_hosts.snap  snapshot_rich_rendering__render_many_hosts_scrolled_down.snap  snapshot_rich_rendering__render_many_hosts_sub_line_on_service_column.snap  snapshot_rich_rendering__render_many_hosts_with_many_logs.snap  snapshot_rich_rendering__render_search_filters_hosts.snap  snapshot_rich_rendering__render_search_single_match.snap  snapshot_sub_line_selector__ip_info_popup_closed.snap  snapshot_sub_line_selector__ip_info_popup_open.snap  snapshot_sub_line_selector__single_line_copy_flash.snap  snapshot_sub_line_selector__sub_line_individual_copy_flash.snap  snapshot_sub_line_selector__sub_line_selector_after_row_shift_copy.snap  snapshot_sub_line_selector__sub_line_selector_at_beta.snap  snapshot_sub_line_selector__sub_line_selector_at_copy_all.snap  snapshot_sub_line_selector__sub_line_selector_renders.snap  snapshots__render_compact_mode.snap  snapshots__render_default.snap  snapshots__render_default_config_editor_box.snap  snapshots__render_default_config_editor_box_next_tab.snap  snapshots__render_default_config_editor_box_select_edit.snap  snapshots__render_default_keybindings_popup.snap  snapshots__render_default_search_box.snap
