[package]
name = "mdns-scanner"
version.workspace = true
description = "Scan a network and create a list of IPs and associated hostnames, including mDNS hostnames and other aliases."
exclude = [".github", "scripts"]
keywords = ["tui", "command-line", "network"]
license.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mds-cli.workspace = true
mds-config.workspace = true
mds-tui.workspace = true
color-eyre.workspace = true
semver.workspace = true
tokio = { version = "1.45.1", default-features = false }
axoupdater = { workspace = true, features = [
    "github_releases",
], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = "0.1.47"

[target.'cfg(all(not(target_os = "windows"), not(target_os = "openbsd"), not(target_os = "freebsd"), target_arch = "x86_64"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", optional = true }

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
testresult.workspace = true
pretty_assertions.workspace = true

[profile.release]
opt-level = 3
debug = false
panic = "abort"
strip = true
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

[features]
default = []
# Toggle for the features that are enabled for the distributed prebuilt version
dist = ["jemalloc", "self-update"]
jemalloc = ["tikv-jemallocator"]
# Adds self-update functionality. This feature is only enabled for the cargo-dist installer
# and should be left unselected when building mdns-scanner for package managers.
self-update = ["axoupdater", "mds-cli/self-update"]

[workspace]
members = [
    "crates/mds-cli",
    "crates/mds-collector",
    "crates/mds-config",
    "crates/mds-default",
    "crates/mds-dns-sd",
    "crates/mds-ipinfo",
    "crates/mds-log",
    "crates/mds-netscan",
    "crates/mds-tui",
    "crates/mds-util",
]

[workspace.package]
version = "0.16.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Marc Beck König <mgit@tuta.io>"]
readme = "README.md"
homepage = "https://github.com/CramBL/mdns-scanner"
repository = "https://github.com/CramBL/mdns-scanner"
rust-version = "1.88.0"

[workspace.dependencies]
mds-config.path = "crates/mds-config"
mds-dns-sd.path = "crates/mds-dns-sd"
mds-log.path = "crates/mds-log"
mds-util.path = "crates/mds-util"
mds-cli.path = "crates/mds-cli"
mds-tui.path = "crates/mds-tui"
mds-netscan.path = "crates/mds-netscan"
mds-ipinfo.path = "crates/mds-ipinfo"
mds-collector.path = "crates/mds-collector"
mds-default.path = "crates/mds-default"
serde = { version = "1.0", default-features = false, features = ["derive"] }
axoupdater = { version = "0.9.0", default-features = false }
anyhow = "1.0.98"
ringbuffer = "0.15.0"
chrono = { version = "0.4.41", default-features = false, features = [
    "std",
    "clock",
] }
strum_macros = "0.27.1"
socket2 = "0.5.9"
parking_lot = { version = "0.12.4", default-features = false }
regex = { version = "1.11.1", features = ["std"], default-features = false }
ratatui = "0.29.0"
semver = "1.0.26"
color-eyre = "0.6.5"
tui-textarea = "0.7.0"
unicode-width = "0.2.0"
threadpool = "1.8.1"
dns-lookup = "2.0.4"
config = { version = "0.15.11", features = ["toml"], default-features = false }

# Dev-dependencies
testresult = "0.4.1"
pretty_assertions = "1.4.1"
tempfile = "3"

[workspace.lints.rust]
missing_copy_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
variant_size_differences = "warn"
unexpected_cfgs = "warn"
unsafe_code = "warn"

[workspace.lints.clippy]
disallowed_macros = "warn"                   # See clippy.toml
disallowed_methods = "warn"                  # See clippy.toml
disallowed_names = "warn"                    # See clippy.toml
disallowed_script_idents = "warn"            # See clippy.toml
disallowed_types = "warn"                    # See clippy.toml
as_ptr_cast_mut = "warn"
await_holding_lock = "warn"
bool_to_int_with_if = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
fn_to_numeric_cast_any = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
into_iter_without_iter = "warn"
invalid_upcast_comparisons = "warn"
iter_not_returning_iterator = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_without_into_iter = "warn"
large_digit_groups = "warn"
large_include_file = "warn"
large_stack_arrays = "warn"
large_stack_frames = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
literal_string_with_formatting_args = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_on_vec_items = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
missing_enforced_import_renames = "warn"
missing_safety_doc = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
needless_range_loop = "warn"
negative_feature_names = "warn"
non_zero_suggestions = "warn"
