[package]
name = "mdns-scanner"
version.workspace = true
description = "Scan a network and create a list of IPs and associated hostnames, including mDNS hostnames and other aliases."
exclude = [".github", "scripts"]
keywords = ["tui", "command-line", "network"]
license.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mds-cli.workspace = true
mds-config.workspace = true
mds-tui.workspace = true
mds-log.workspace = true
ratatui.workspace = true
color-eyre.workspace = true
semver.workspace = true
tokio = { version = "1.47.1", default-features = false }
axoupdater = { workspace = true, features = [
    "github_releases",
], optional = true }
mds-keybindings.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = "0.1.47"

[target.'cfg(all(not(target_os = "windows"), not(target_os = "openbsd"), not(target_os = "freebsd"), target_arch = "x86_64"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", optional = true }

[dev-dependencies]
insta.workspace = true

[profile.release]
opt-level = 3
debug = false
panic = "abort"
strip = true
lto = true
codegen-units = 1

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

[features]
default = []
# Toggle for the features that are enabled for the distributed prebuilt version
dist = ["jemalloc", "self-update"]
jemalloc = ["tikv-jemallocator"]
# Adds self-update functionality. This feature is only enabled for the cargo-dist installer
# and should be left unselected when building mdns-scanner for package managers.
self-update = ["axoupdater", "mds-cli/self-update"]

[workspace]
members = [
    "crates/mds-cli",
    "crates/mds-collector",
    "crates/mds-config",
    "crates/mds-default",
    "crates/mds-dns-sd",
    "crates/mds-ipinfo", "crates/mds-keybindings",
    "crates/mds-log",
    "crates/mds-netscan",
    "crates/mds-tui",
    "crates/mds-util",
]

[workspace.package]
description = "Scan a network and create a list of IPs and associated hostnames, including DNS-SD service instances, mDNS hostnames and other aliases."
version = "0.26.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Marc Beck König <mgit@tuta.io>"]
readme = "README.md"
homepage = "https://github.com/CramBL/mdns-scanner"
repository = "https://github.com/CramBL/mdns-scanner"
rust-version = "1.88.0"

[workspace.dependencies]
mds-config.path = "crates/mds-config"
mds-keybindings.path = "crates/mds-keybindings"
mds-dns-sd.path = "crates/mds-dns-sd"
mds-log.path = "crates/mds-log"
mds-util.path = "crates/mds-util"
mds-cli.path = "crates/mds-cli"
mds-tui.path = "crates/mds-tui"
mds-netscan.path = "crates/mds-netscan"
mds-ipinfo.path = "crates/mds-ipinfo"
mds-collector.path = "crates/mds-collector"
mds-default.path = "crates/mds-default"
console = "0.16.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
axoupdater = { version = "0.9.1", default-features = false }
ringbuffer = "0.16.0"
chrono = { version = "0.4.43", default-features = false, features = [
    "std",
    "clock",
] }
strum = { version = "0.27", features = ["derive"] }
socket2 = "0.6.2"
parking_lot = { version = "0.12.5", default-features = false }
regex = { version = "1.12.2", features = ["std"], default-features = false }
ratatui = "0.30.0"
semver = "1.0.27"
color-eyre = "0.6.5"
tui-textarea = "0.7.0"
unicode-width = "0.2.0"
threadpool = "1.8.1"
dns-lookup = "3.0.0"
config = { version = "0.15.16", features = ["toml"], default-features = false }
rlimit = "0.10.2"
log = "0.4"
smallvec = "1.15.1"
toml = "0.9.11"
toml_edit = "0.24.0"
dirs = "6.0"
thiserror = "2.0"

# Dev-dependencies
testresult = "0.4.1"
pretty_assertions = "1.4.1"
tempfile = "3"
proptest = "1.8.0"
insta = { version = "1.46.1", features = ["filters"] }

[workspace.lints.rust]
missing_copy_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
variant_size_differences = "warn"
unexpected_cfgs = "warn"
unsafe_code = "warn"

[workspace.lints.clippy]
disallowed_macros = "warn"                   # See clippy.toml
disallowed_methods = "warn"                  # See clippy.toml
disallowed_names = "warn"                    # See clippy.toml
disallowed_script_idents = "warn"            # See clippy.toml
disallowed_types = "warn"                    # See clippy.toml
indexing_slicing = "allow"                   # Simply too annoying to use ratatui and byte buffers otherwise
as_ptr_cast_mut = "warn"
await_holding_lock = "warn"
bool_to_int_with_if = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
fn_to_numeric_cast_any = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
into_iter_without_iter = "warn"
invalid_upcast_comparisons = "warn"
iter_not_returning_iterator = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_without_into_iter = "warn"
large_digit_groups = "warn"
large_include_file = "warn"
large_stack_arrays = "warn"
large_stack_frames = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
literal_string_with_formatting_args = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
missing_enforced_import_renames = "warn"
missing_safety_doc = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
needless_range_loop = "warn"
negative_feature_names = "warn"
non_zero_suggestions = "warn"
