[package]
name = "mds-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.5.40", default-features = false, features = [
    "std",
    "derive",
    "color",
    "help",
] }
regex.workspace = true

[lints]
workspace = true
