[package]
name = "mds-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.5.45", default-features = false, features = [
    "std",
    "derive",
    "color",
    "help",
    "env",
] }
regex.workspace = true
mds-default.workspace = true

[lints]
workspace = true

[features]
default = []
self-update = []
