[package]
name = "mds-collector"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mds-util.workspace = true
mds-dns-sd.workspace = true
mds-ipinfo.workspace = true
mds-config.workspace = true
log.workspace = true
anyhow.workspace = true

[lints]
workspace = true
