[package]
name = "mds-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mds-default.workspace = true
mds-cli.workspace = true
config.workspace = true
regex.workspace = true
ratatui.workspace = true
serde.workspace = true
parking_lot.workspace = true
thiserror = "2.0"
dirs = "6.0"
toml_edit = "0.23.3"
toml = "0.9.5"


[dev-dependencies]
tempfile.workspace = true
testresult.workspace = true

[lints]
workspace = true
