[package]
name = "mds-default"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
paste = "1.0"

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
