[package]
name = "mds-dns-sd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mds-log.workspace = true
mds-util.workspace = true
anyhow.workspace = true
socket2.workspace = true
hickory-proto = { version = "0.25", default-features = false, features = [
    "mdns",
] }

[lints]
workspace = true
