[package]
name = "mds-ipinfo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mds-util.workspace = true
unicode-width.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
