[package]
name = "mds-keybindings"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ratatui.workspace = true
serde.workspace = true
derive_deref.workspace = true
strum.workspace = true
config.workspace = true
toml.workspace = true

[lints]
workspace = true
