[package]
name = "mds-keybindings"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mds-default.workspace = true
tempfile.workspace = true
ratatui.workspace = true
serde.workspace = true
strum.workspace = true
toml.workspace = true
dirs.workspace = true

[dev-dependencies]
testresult.workspace = true
insta.workspace = true

[lints]
workspace = true
