[package]
name = "mds-log"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ringbuffer.workspace = true
chrono.workspace = true
strum.workspace = true
parking_lot.workspace = true

[lints]
workspace = true
