[package]
name = "mds-netscan"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mds-config.workspace = true
mds-util.workspace = true
mds-ipinfo.workspace = true
mds-dns-sd.workspace = true
log.workspace = true
threadpool.workspace = true
dns-lookup.workspace = true


[lints]
workspace = true
