[package]
name = "mds-util"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mds-log.workspace = true
dns-parser.workspace = true
pnet.workspace = true

[lints]
workspace = true
