[package]
name = "mds-util"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mds-log.workspace = true
dns-parser.workspace = true
pnet = "0.35.0"

[target.'cfg(windows)'.build-dependencies]
anyhow.workspace = true
reqwest = { version = "0.12.20", default-features = false, features = [
    "blocking",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
zip = "4.1.0"

[lints]
workspace = true
