[package]
name = "mds-util"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mds-config.workspace = true
rlimit.workspace = true
log.workspace = true
console.workspace = true
pnet = "0.35.0"

[target.'cfg(windows)'.build-dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.12.23", default-features = false, features = [
    "blocking",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
zip = "5.1.1"

[lints]
workspace = true
